correct errors in the alignment of body content

--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -1,5 +1,8 @@
+
 *{
-    font-family: 'nunito', Arial, Helvetica, sans-serif;
+    font-family: 'Nunito', Arial, Helvetica, sans-serif;
+    padding: 0;
+    margin: 0;
 }
 span{
     font-size: 30px;
@@ -71,10 +74,24 @@ color: black;
   padding: 0 10px;
   }
   .content1{
-      display: inline-block;
+      display: flex;
       font-size: 25px;
-      margin-left: 50px;
+      align-items: center;
+      margin-left: auto;
       padding-left: 150px;
+      justify-content: space-between;
+  }
+  .content1 .btn-style{
+      margin-top: 50px;
+      display: inline;
+  }
+  .menu .img-right img{
+      display: inline-flex;
+      width: 100px;
+      height: 100px;
+  }
+  .content1 img{
+      float: right;
   }
   .content1 h2{
       color:#EC4067
@@ -82,14 +99,14 @@ color: black;
   .btn-1{
     text-align: center;
     height: 55px;
-  width: 170px;
+     width: 170px;
       background-color: #ffffff;
       border: 2px solid  #EC4067;
       color: #EC4067;
       margin: 0 10px;
-  font-size: 20px;
-  font-weight: 500;
-  padding: 0 10px;
+      font-size: 20px;
+      font-weight: 500;
+      padding: 0 10px;
   }
   .body-content{
       margin-top: 100px;
@@ -161,8 +178,11 @@ color: black;
   }
   .content-main{
     margin-top: 100px;
-    text-align: left; 
+    text-align: justify; 
     font-size: 30px;
+    padding: 10px;
+    text-decoration: wavy;
+    margin: 20px;
   }
   .content-main img{
       float: right;
